--- a/README
+++ b/README
@@ -1,41 +1,25 @@
-# Adding a new module to GCB 1.8
+In July 2012, Google hosted a 2-week online, community-based course
+called Power Searching with Google. The course showcased search
+techniques and how to use them to solve real, everyday problems. We
+created Power Searching as a MOOC (Massive Online Open Course) by
+using a variety of Google's existing products and by writing an App
+Engine application for the course material and assessments.
 
-Small example of how new modules are added on Google CourseBuilder 1.8 version
+We were quite pleased with the success of Power Searching with
+Google. Over 154,000 students from 190 countries enrolled in the
+course. Almost 68,000 of the original registrants got started by
+filling out a pre-course assessment. And over 20,000 earned a
+certificate of successful completion.
 
-## Module folder
+Course Builder Experiment represents our decision to open source the
+code we used to create Power Searching and to document our use of that
+code in conjunction with Google products to create the entire
+experience.
 
-First thing you need is to create a new folder inside `modules/` to host all your module's files. Then you need a file to act as the module's entry point, its content should look something like this:
+Course Builder uses an icon (found at
+coursebuilder/modules/core_tags/resources/html5-badge-h-solo.png)
+from w3.org, as licensed under the Creative Commons Attribution 3.0 Unported
+license version.  For more information on HTML5, see http://www.w3.org/html5
 
-``` python
-from models import custom_modules
-
-def register_module():
-    """Registers this module in the registry."""
-
-    global_urls = []
-    course_urls = []
-
-    global custom_module
-    custom_module = custom_modules.Module(
-        'Module title',
-        'Description',
-        global_urls, course_urls)
-    return custom_module
-```
-
-And now you have to add it to the list of modules in `app.yaml` under `env_variables.GCB_REGISTERED_MODULES` like so:
-
-``` yaml
-env_variables:
-  GCB_PRODUCT_VERSION: '1.8.0'
-
-  ...
-
-  GCB_REGISTERED_MODULES:
-    modules.activity_tag.activity_tag
-    ...
-    modules.oauth2.oauth2=disabled
-    modules.new_module.new_module
-```
-
-And you're set. I've included a couple of URLs and hooks in the module configuration just in case an example is needed.
+For more information on Course Builder, see the documentation at
+https://code.google.com/p/course-builder/wiki/CourseBuilderChecklist.
